--- a/apps/web/src/app/watch/components/channel-bar/channel-bar.component.scss
+++ b/apps/web/src/app/watch/components/channel-bar/channel-bar.component.scss
@@ -50,6 +50,10 @@
         margin-top: calc(variables.$spacing-sm + 4px);
       }
     }
+
+    app-subscribe-button{
+      margin-left: variables.$spacing-normal;
+    }
   }
 
   .video-actions {
