refactor: use ng optimized image with cloudinary loader to load images

--- a/apps/web/src/app/shared/components/comment/comment.component.html
+++ b/apps/web/src/app/shared/components/comment/comment.component.html
@@ -5,8 +5,8 @@
 >
   <img
     class="avatar"
-    [width]="35"
-    [height]="35"
+    width="80"
+    height="80"
     [alt]="comment.owner.displayName"
     [ngSrc]="comment.owner.avatar.public_id"
   />
