chore: extracted channel nav component

--- a/apps/web/src/app/channel/channel.component.html
+++ b/apps/web/src/app/channel/channel.component.html
@@ -38,45 +38,6 @@
 }
 
 <section>
-  <nav class="channel-nav">
-    <ul class="channel-menu" cdkMenuBar>
-      <li>
-        <a
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          [routerLink]="['/c', username]"
-          cdkMenuItem
-          >Home</a
-        >
-      </li>
-      <li>
-        <a
-          [routerLink]="['/c', username, 'videos']"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          cdkMenuItem
-          >Videos</a
-        >
-      </li>
-      <li>
-        <a
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          [routerLink]="['/c', username, 'playlists']"
-          cdkMenuItem
-          >Playlists</a
-        >
-      </li>
-      <li>
-        <a
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          [routerLink]="['/c', username, 'about']"
-          cdkMenuItem
-          >About</a
-        >
-      </li>
-    </ul>
-  </nav>
+  <app-channel-nav [username]="username" />
   <router-outlet />
 </section>
