--- a/apps/web/src/app/shared/components/comment/comment.component.html
+++ b/apps/web/src/app/shared/components/comment/comment.component.html
@@ -12,7 +12,7 @@
   />
 </a>
 
-<div class="comment-body">
+<div class="comment-body" id="comment-{{ comment._id }}">
   <div class="comment-bar">
     <a
       class="comment-owner"
