--- a/apps/web/src/app/watch/components/comment-form/comment-form.component.html
+++ b/apps/web/src/app/watch/components/comment-form/comment-form.component.html
@@ -1,5 +1,10 @@
 <form [formGroup]="commentForm" (ngSubmit)="comment()">
-  <app-field-error fieldName="comment" [control]="commentForm.get('comment')" />
+  @if (!commentForm.get('comment')?.hasError('required')) {
+    <app-field-error
+      fieldName="comment"
+      [control]="commentForm.get('comment')"
+    />
+  }
   <label for="comment">Add a comment</label>
   <input
     autocomplete="off"
