fix: remove cdr from comment form and adjust video options position

--- a/apps/web/src/app/shared/components/video-options/video-options.component.html
+++ b/apps/web/src/app/shared/components/video-options/video-options.component.html
@@ -2,9 +2,9 @@
   [cdkMenuTriggerFor]="videoOptions"
   [cdkMenuPosition]="[
     {
-      originX: 'center',
+      originX: 'start',
       originY: 'bottom',
-      overlayX: 'center',
+      overlayX: 'start',
       overlayY: 'top'
     }
   ]"
@@ -16,17 +16,17 @@
 <ng-template #videoOptions>
   <div cdkMenu class="menu">
     <div class="menu-group">
-      <button class="menu-item">
+      <button cdkMenuItem class="menu-item">
         <i class="bx bxs-playlist sm"></i>
         <span>Save to Playlist</span>
       </button>
-      <button class="menu-item">
+      <button cdkMenuItem class="menu-item">
         <i class="bx bxs-add-to-queue sm"></i>
         <span>Add to Queue</span>
       </button>
     </div>
     <div class="menu-group">
-      <button class="menu-item">
+      <button cdkMenuItem class="menu-item">
         <i class="bx bxs-download sm"></i>
         <span>Download</span>
       </button>
