--- a/apps/web/src/app/watch/components/video-player/video-player.component.scss
+++ b/apps/web/src/app/watch/components/video-player/video-player.component.scss
@@ -1,7 +1,6 @@
 video {
-  // max-width: 656px;
   width: 100%;
   display: block;
   aspect-ratio: 16 / 9;
-  border-radius: 0.5rem;
+  border-radius: 12px;
 }
