chore: add skeleton to sidebar subscription list

--- a/apps/web/src/app/core/components/sidebar-subscription-list/sidebar-subscription-list.component.html
+++ b/apps/web/src/app/core/components/sidebar-subscription-list/sidebar-subscription-list.component.html
@@ -23,6 +23,10 @@
           <p class="info-text">No channels subscribed.</p>
         }
       </ul>
+    } @else {
+      @for (_ of placeholders; track _) {
+        <app-sidebar-subscription-skeleton />
+      }
     }
   } @else {
     <p class="info-text">
