chore: added not loggedin states to auth based routes

--- a/apps/web/src/app/channel/components/channel-avatar/channel-avatar.component.html
+++ b/apps/web/src/app/channel/components/channel-avatar/channel-avatar.component.html
@@ -1,6 +1,6 @@
 <div class="avatar-wrapper">
-  @if (session$ | async; as session) {
-    @if (session._id === channel._id) {
+  <app-if-session>
+    @if ((session$ | async)?._id == channel._id) {
       <input
         #avatarControl
         type="file"
@@ -13,7 +13,7 @@
         <i class="bx bxs-edit sm"></i>
       </button>
     }
-  }
+  </app-if-session>
   <img
     class="avatar"
     [ngSrc]="channel.avatar.public_id"
