--- a/apps/web/src/app/shared/components/fullscreen-info/fullscreen-info.component.html
+++ b/apps/web/src/app/shared/components/fullscreen-info/fullscreen-info.component.html
@@ -1,6 +1,6 @@
 <div class="fullscreen-info">
   <div>
-    <div #iconContainer></div>
+    <ng-container #iconContainer />
     <h2 class="info-heading">{{ text }}</h2>
   </div>
 </div>
