--- a/apps/web/src/app/core/pages/home/home.component.html
+++ b/apps/web/src/app/core/pages/home/home.component.html
@@ -1,8 +1,14 @@
 <section>
   <h1>Browse</h1>
   <app-item-grid>
-    @for (video of videos$ | async; track video._id) {
-      <app-video-card [video]="video" />
+    @if (videos$ | async; as videos) {
+      @for (video of videos; track video._id) {
+        <app-video-card [video]="video" />
+      }
+    } @else {
+      @for (placeholder of placeholders; track placeholder) {
+        <app-video-skeleton />
+      }
     }
   </app-item-grid>
 </section>
