--- a/apps/web/src/app/feed/components/subscription-card/subscription-card.component.scss
+++ b/apps/web/src/app/feed/components/subscription-card/subscription-card.component.scss
@@ -73,7 +73,7 @@
     span {
       margin: 0;
       line-height: 1.5;
-      font-weight: variables.$fw-bold;
+      font-weight: variables.$fw-semibold;
     }
 
     .subscription-meta {
