chore: add playlist card skeleton on playlist page

--- a/apps/web/src/app/shared/components/playlist-card/playlist-card.component.scss
+++ b/apps/web/src/app/shared/components/playlist-card/playlist-card.component.scss
@@ -76,7 +76,7 @@
       border-radius: 12px;
     }
 
-    &::before {
+    &:not(:has(.skeleton))::before {
       background-color: rgba(variables.$clr-dusty-gray, 0.1);
       content: '';
       z-index: -1;
