fix: auth guard, add not found component, and studio module

--- a/apps/web/src/app/core/components/header/header.component.html
+++ b/apps/web/src/app/core/components/header/header.component.html
@@ -14,6 +14,7 @@
   
   <app-if-session [notLoggedInTemplate]="notLoggedInTemplate">
     <div class="user-actions">
+      <a routerLink="/studio" class="button icon primary"><i class="bx bx-plus sm"></i></a>
       <app-user-profile />
     </div>
   </app-if-session>
